# Humanseg_CPP

./: CMakeLists.txt  config.h.in  main.cc  main.cpp  run.sh  test.py
model_repository/ppseg_onnx/: config.pbtxt
models/: ppseg_lite_portrait_398x224_with_softmax.onnx
onnx/core/: human_seg_model_info.h
onnx/cv/: human_segmentation.cc  human_segmentation.h
opencv2/: opencv_modules.hpp
